# FinanceHelper

./: .gitignore  MultiFormatLoader.py  document_config.yaml  graph_manager.py  ingestion.py  logger.py  main.py  makefile  pyproject.toml  retrieval.py
.env-scripts/: bw-pull.sh  bw-push.sh
backend/: api.py  core.py  schemas.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/api/: client.js
frontend/src/components/: ChatMessage.vue  ChatPanel.vue  FilterSidebar.vue  GraphExplorer.vue  SourceCitations.vue  StatsBar.vue
frontend/src/composables/: useChat.js  useFilters.js  useGraph.js
graph/: consts.py  graph.py  state.py
graph/chains/: generation.py  retrieval_grader.py
graph/chains/tests/: test_chains.py
graph/nodes/: __init__.py  generate.py  grade_documents.py  retrieve.py  web_search.py
langgraph_agents/: chains.py  langgraph_agents.py  nodes.py  react.py  schemas.py
